gsasl_hash_length() to get size of digest.

** New crypto interfaces for generic hash/hmac.
Use gsasl_hash() and gsasl_hmac() instead of the now deprecated
gsasl_md5(), gsasl_sha1(), gsasl_hmac_md5(), and gsasl_hmac_sha1().

** New SCRAM crypto helper APIs.
The APIs are gsasl_scram_secrets_from_password() and
gsasl_scram_secrets_from_salted_password().

** API and ABI modifications.
gsasl_hash: ADDED.
gsasl_hmac: ADDED.
gsasl_md5, gsasl_sha1: DEPRECATED.
gsasl_hmac_md5, gsasl_hmac_sha1: DEPRECATED.
Gsasl_hash, Gsasl_hash_length: ADDED.
GSASL_HASH_MD5, GSASL_HASH_SHA1, GSASL_HASH_SHA256: ADDED.
GSASL_HASH_MD5_SIZE, GSASL_HASH_SHA1_SIZE, GSASL_HASH_SHA256_SIZE: ADDED.
GSASL_HASH_MAX_SIZE: ADDED.
gsasl_scram_secrets_from_password: ADDED.
gsasl_scram_secrets_from_salted_password: ADDED.

* Version 1.9.0 (released 2020-01-03) [beta]

** API and ABI modifications.
No changes since last version.

* Version 1.8.1 (released 2019-08-02) [stable]

** GSSAPI client: Now retrieves GSASL_AUTHZID for authorization identity.
** GSSAPI client: Can now transmit an empty/missing authorization identity.
Before the GSSAPI client retrieved GSASL_AUTHID (authentication
identity) and used that as the authorization identity.  For backwards
compatibility, the code now first tries GSASL_AUTHZID and then
GSASL_AUTHID when discovering the authorization identity.  If you
don't want any authorization identity (and thus let the server fall
back on the identity implied from the Kerberos layer) then return
GSASL_NO_CALLBACK on both.  Please update code to use GSASL_AUTHZID
instead of GSASL_AUTHID, in case we remove the backwards compatibility
code.  Reported by Amon Ott.

** GSSAPI server: Fix memory leak after successful authentication.
Report and patch by Goktan Kantarcioglu.

** libgsasl: gsasl_md5, gsasl_hmac_md5, gsasl_sha1, gsasl_hmac_sha1 API fix.
The final output variable used to be 'char *out[16]' and
'char *out[20]' respectively, however this triggered bug in the gdoc