@@ -26,14 +26,14 @@
 
 /**
  * gsasl_base64_to:
- * @in: input byte array
- * @inlen: size of input byte array
- * @out: pointer to newly allocated output byte array
- * @outlen: pointer to size of newly allocated output byte array
+ * @in: input byte array.
+ * @inlen: size of input byte array.
+ * @out: pointer to newly allocated base64-encoded string.
+ * @outlen: pointer to size of newly allocated base64-encoded string.
  *
- * Encode data as base64.  The string is zero terminated, and @outlen
- * holds the length excluding the terminating zero.  The @out buffer
- * must be deallocated by the caller.
+ * Encode data as base64.  The @out string is zero terminated, and
+ * @outlen holds the length excluding the terminating zero.  The @out
+ * buffer must be deallocated by the caller.
  *
  * Return value: Returns %GSASL_OK on success, or %GSASL_MALLOC_ERROR
  *   if input was too large or memory allocation fail.
@@ -80,6 +80,81 @@ gsasl_base64_from (const char *in, size_t inlen, char **out, size_t * outlen)
 
   if (*out == NULL)
     return GSASL_MALLOC_ERROR;
+
+  return GSASL_OK;
+}
+
+#include "mechtools.h"
+
+/**
+ * gsasl_hex_to:
+ * @in: input byte array.
+ * @inlen: size of input byte array.
+ * @out: pointer to newly allocated hex-encoded string.
+ * @outlen: pointer to size of newly allocated hex-encoded string.
+ *
+ * Hex encode data.  The @out string is zero terminated, and @outlen
+ * holds the length excluding the terminating zero.  The @out buffer
+ * must be deallocated by the caller.
+ *
+ * Return value: Returns %GSASL_OK on success, or %GSASL_MALLOC_ERROR
+ *   if input was too large or memory allocation fail.
+ *
+ * Since: 1.10
+ **/
+int
+gsasl_hex_to (const char *in, size_t inlen, char **out, size_t * outlen)
+{
+  size_t len = 2 * inlen;
+
+  if (outlen)
+    *outlen = len;
+
+  *out = malloc (*outlen + 1);
+  if (*out == NULL)
+    return GSASL_MALLOC_ERROR;
+
+  _gsasl_hex_encode (in, inlen, *out);
+  (*out)[len] = '\0';
+
+  return GSASL_OK;
+}
+
+/**
+ * gsasl_hex_from:
+ * @in: input byte array
+ * @out: pointer to newly allocated output byte array
+ * @outlen: pointer to size of newly allocated output byte array
+ *
+ * Decode hex data.  The @out buffer must be deallocated by the
+ * caller.
+ *
+ * Return value: Returns %GSASL_OK on success, %GSASL_BASE64_ERROR if
+ *   input was invalid, and %GSASL_MALLOC_ERROR on memory allocation
+ *   errors.
+ *
+ * Since: 1.10
+ **/
+int
+gsasl_hex_from (const char *in, char **out, size_t * outlen)
+{
+  size_t inlen = strlen (in);
+  size_t l = inlen / 2;
+
+  if (inlen % 2 != 0)
+    return GSASL_BASE64_ERROR;
+
+  if (!_gsasl_hex_p (in))
+    return GSASL_BASE64_ERROR;
+
+  *out = malloc (l);
+  if (!*out)
+    return GSASL_MALLOC_ERROR;
+
+  _gsasl_hex_decode (in, *out);
+
+  if (outlen)
+    *outlen = l;
 
   return GSASL_OK;
 }
