@@ -32,7 +32,11 @@ gsasl_md5(), gsasl_sha1(), gsasl_hmac_md5(), and gsasl_hmac_sha1().
 The APIs are gsasl_scram_secrets_from_password() and
 gsasl_scram_secrets_from_salted_password().
 
+** New APIs for hex encoding/decoding.
+Use gsasl_hex_from and gsasl_hex_to similar to the base64 functions.
+
 ** API and ABI modifications.
+gsasl_hex_to, gsasl_hex_from: ADDED.
 gsasl_hash: ADDED.
 gsasl_hmac: ADDED.
 gsasl_md5, gsasl_sha1: DEPRECATED.
